@@ -50,3 +50,5 @@
 ( cvs diff -u -r 1.1.2.37 -r 1.1.2.38 src/poppler_viewer.c;  ) > 0.2.0cvs44.patchset
 ( cvs diff -u -r 1.1.2.38 -r 1.1.2.39 src/poppler_viewer.c;  ) > 0.2.0cvs45.patchset
 ( cvs diff -u -r 1.1.2.39 -r 1.1.2.40 src/poppler_viewer.c;  ) > 0.2.0cvs46.patchset
+( cvs diff -u -r 1.1.2.40 -r 1.1.2.41 src/poppler_viewer.c;  ) > 0.2.0cvs47.patchset
+( cvs diff -u -r 1.1.2.40 -r 1.1.2.41 src/poppler_viewer.c;  ) > 0.2.0cvs48.patchset
